@@ -200,3 +200,8 @@ Either @value{GDBN} detached from the inferior, or the inferior
 exited.  The argument @var{pid} identifies the inferior.
 @end deftypefun
 
+ @deftypefun void test_notification (int @var{somearg})
+This observer is used for internal testing.  Do not use.  
+See testsuite/gdb.gdb/observer.exp.
+ @end deftypefun
+
